# Provenn

./: .gitignore  FRICTION.md  LICENSE  README.md  REGISTER.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  keepalive.yml
app/: index.html  package.json
app/public/: demo-log.json  guide.html
app/src/: App.tsx  styles.css
app/src/components/: ProbChart.tsx  Ticker.tsx
app/src/docs/: content.tsx
app/src/lib/: data.ts  plain.ts  router.ts  types.test.ts  types.ts
app/src/pages/: AgentProfile.tsx  Dashboard.tsx  Docs.tsx  Landing.tsx
docs/: trustless-settlement.md
docs/superpowers/specs/: 2026-07-15-tier2-integrity-gate-demo-design.md
mcp/: package.json  tsconfig.json
mcp/replay-samples/: 2026-07-11-live-worldcup.jsonl  glitch-demo.jsonl
mcp/scripts/: agent-status.ts  calibration.ts  discover-matches.ts  exercise-settle-proof.ts  probe-odds-history.ts  probe-proof.ts  run-agent.ts  serve-api.ts  settlement-manifest.json  smoke.ts  start-service.ts  txline-setup.ts  verify-agent.ts
mcp/src/: index.ts  mcpHttp.ts  mcpServer.ts  recorder.ts  replay.ts
mcp/src/agent/: prediction.ts  runner.ts
mcp/src/chain/: provenn.ts
mcp/src/idl/: provenn_protocol.json
mcp/src/signal/: detector.ts  integrity.ts
mcp/src/txline/: client.ts  (+1 more)
mcp/test/: detector.test.ts  integrity.test.ts  prediction.test.ts  runner.test.ts
program/: Anchor.toml  Cargo.toml
program/programs/provenn-protocol/: Cargo.toml
program/programs/provenn-protocol/src/: lib.rs  txoracle.rs
program/tests/: package-lock.json  package.json  provenn.test.ts
