[package]
name = "provenn-protocol"
version = "0.1.0"
description = "Provenn — unfakeable AI trading agent track records on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "provenn_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31"
